@@ -1,6 +1,12 @@
 2015-10-30  Natalia Portillo  <claunia@claunia.com>
 
 	* SCSI/Modes.cs:
+	  Modify mode page 01h decoding for CD-ROM returned mode page
+	  size.
+
+2015-10-30  Natalia Portillo  <claunia@claunia.com>
+
+	* SCSI/Modes.cs:
 	  Implemented decoding mode page 0Eh.
 
 2015-10-30  Natalia Portillo  <claunia@claunia.com>
